prueba de nueva version con html y css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <section class="principal">
             <div class="texto-uno">
-                <textarea class="texto-nuevo" rows="20" cols="45" placeholder="Escribe el texto aquí!"></textarea>
+                <textarea class="texto-nuevo" placeholder="Escribe el texto aquí!"></textarea>
                 <p>Escribe solo letras minúsculas, sin acentos ni caractéres especiales</p>
             </div>
             <div>
@@ -32,4 +32,7 @@
             </div> 
         </section>
     </main>
+    <footer>
+        <input type="text" class="text-area" value="Ingresa el texto aquí"/>
+    </footer>
 </body>
