modificaciones de prueba

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <section section="principal">
             <img class="logo" src="img/Logo.png"/>
             <textarea class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
-            <div>
+            <div class="botones">
                 <p class="principal-dos">Escribe solamente minúsculas y sin acentos.</p>
                 <button class="encriptar">Encriptar</button>
                 <button class="desencriptar">Desencriptar</button>
