--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
         <section section="principal">
             <img class="logo" src="img/Logo.png"/>
             <textarea class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
-            <p class="principal-dos">Escribe solamente minúsculas y sin acentos.</p>
+            <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
                 <button class="encriptar">Encriptar</button>
                 <button class="desencriptar">Desencriptar</button>
@@ -20,10 +20,7 @@
         </section>
         <section class="secundario">
             <textarea class="texto-encriptado"></textarea>
-            <img class="muñeco" src=""/>
-            <p></p>
-            <p></p>
-            <button class="copiar">Copiar</button>
+            <img class="muneco" src="img/Muñeco.png"/>
         </section>
     </main>
 </body>
