--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
     <main>
         <section section="principal">
             <img class="logo" src="img/Logo.png"/>
-            <textarea class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
+            <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
                 <button class="encriptar">Encriptar</button>
@@ -19,8 +19,9 @@
             </div>
         </section>
         <section class="secundario">
-            <textarea class="texto-encriptado"></textarea>
+            <textarea id="texto-encriptado" class="texto-encriptado"></textarea>
             <img class="muneco" src="img/Muñeco.png"/>
         </section>
     </main>
+    <script src="app.js"></script>
 </body>
