proceso inicial en js

--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
             <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
-                <button class="encriptar">Encriptar</button>
-                <button class="desencriptar">Desencriptar</button>
+                <button class="encriptar" onclick="botonEncriptar()">Encriptar</button>
+                <button class="desencriptar" onclick="botonDesncriptar()">Desencriptar</button>
             </div>
         </section>
         <section class="secundario">
