--- a/home.html
+++ b/home.html
@@ -11,6 +11,8 @@
     <main>
         <section section="principal">
             <img class="logo" src="img/Logo.png"/>
+            <h1 class="titulo">Encriptador de Texto</h1>
+            <p class="subtitulo">Challenge elaborado para <a href="https://www.aluracursos.com/">Alura Latam</a></p>
             <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
@@ -19,9 +21,21 @@
             </div>
         </section>
         <section class="secundario">
-            <textarea id="texto-encriptado" class="texto-encriptado"></textarea>
+            <textarea id="texto-encriptado" class="texto-encriptado" disabled></textarea>
             <img class="muneco" src="img/Muñeco.png"/>
+            <p class="frase">Ningún mensaje fue encontrado</p>
+            <p class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
+            <button id="copiar" class="copiar" onclick="botonCopiar()">Copiar</button>
         </section>
     </main>
+    <footer id="pie">
+        <nav>
+            <ul>
+                <li>LinkedIn</li>
+                <li>GitHub</li>
+            </ul>
+        </nav>
+        <p>Christiam Artavia Rojas</p>
+    </footer>
     <script src="app.js"></script>
 </body>
