--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
             <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
-                <button class="encriptar" onclick="botonEncriptar()">Encriptar</button>
+                <button class="encriptar" onclick="botonEncriptar(), mostrarcopiar()">Encriptar</button>
                 <button class="desencriptar" onclick="botonDesncriptar()">Desencriptar</button>
             </div>
         </section>
@@ -25,7 +25,7 @@
             <img class="muneco" src="img/Muñeco.png"/>
             <p class="frase">Ningún mensaje fue encontrado</p>
             <p class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
-            <button id="copiar" class="copiar" onclick="botonCopiar()">Copiar</button>
+            <button id="copiar" class="copiar" onclick="botonCopiar(), ocultarboton()">Copiar</button>
         </section>
     </main>
     <footer id="pie">
