--- a/home.html
+++ b/home.html
@@ -16,26 +16,26 @@
             <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
-                <button class="encriptar" onclick="botonEncriptar(), mostrarcopiar()">Encriptar</button>
-                <button class="desencriptar" onclick="botonDesncriptar()">Desencriptar</button>
+                <button class="encriptar" onclick="botonEncriptar(), mostrarcopiar(), ocultar()">Encriptar</button>
+                <button class="desencriptar" onclick="botonDesncriptar(), mostrarcopiar(), ocultar()">Desencriptar</button>
             </div>
         </section>
         <section class="secundario">
             <textarea id="texto-encriptado" class="texto-encriptado" disabled></textarea>
-            <img class="muneco" src="img/Muñeco.png"/>
-            <p class="frase">Ningún mensaje fue encontrado</p>
-            <p class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
-            <button id="copiar" class="copiar" onclick="botonCopiar(), ocultarboton()">Copiar</button>
+            <img id="muñeco" class="muneco" src="img/Muñeco.png"/>
+            <p id="frase" class="frase">Ningún mensaje fue encontrado</p>
+            <p id="mensaje" class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
+            <button id="copiar" class="copiar" onclick="botonCopiar(), ocultarboton(), mostrar()">Copiar</button>
         </section>
     </main>
     <footer id="pie">
         <nav>
             <ul>
-                <li>LinkedIn</li>
-                <li>GitHub</li>
+                <li><a href="https://www.linkedin.com/in/christiam-artavia-cr">LinkedIn</a></li>
+                <li><a href="https://github.com/crisjar89">GitHub</a></li>
             </ul>
         </nav>
-        <p>Christiam Artavia Rojas</p>
+        <p class="copyright">&copy Crisjar89 2024 - Christiam Artavia Rojas</p>
     </footer>
     <script src="app.js"></script>
 </body>
