actualizaciones en css y js

--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
     <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="stylehome.css">
@@ -16,16 +17,20 @@
             <textarea id="texto-nuevo" class="texto-nuevo" placeholder="¡Escribe el texto aquí!"></textarea>
             <p class="principal-dos"><img src="img/sig.png" class="signo">Escribe solamente minúsculas y sin acentos.</p>
             <div class="botones">
-                <button class="encriptar" onclick="botonEncriptar(), mostrarcopiar(), ocultar()">Encriptar</button>
-                <button class="desencriptar" onclick="botonDesncriptar(), mostrarcopiar(), ocultar()">Desencriptar</button>
+                <button id="encripta" class="encriptar" onclick="botonEncriptar(), mostrarcopiar(), mostrarExitoEncriptar(), ocultar()">Encriptar</button>
+                <button class="desencriptar" onclick="botonDesncriptar(), mostrarcopiar(), mostrarExitoDesencriptar(), ocultar()">Desencriptar</button>
             </div>
         </section>
         <section class="secundario">
             <textarea id="texto-encriptado" class="texto-encriptado" disabled></textarea>
             <img id="muñeco" class="muneco" src="img/Muñeco.png"/>
-            <p id="frase" class="frase">Ningún mensaje fue encontrado</p>
-            <p id="mensaje" class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
-            <button id="copiar" class="copiar" onclick="botonCopiar(), ocultarboton(), mostrar()">Copiar</button>
+            <div class="secundario-dos">
+                <p id="frase" class="frase">Ningún mensaje fue encontrado</p>
+                <p id="mensaje" class="mensaje">Escribe el texto que deseas Encriptar o Desencriptar</p>
+            </div>
+            <p id="exito-enc" class="exito-encriptar">¡Tu mensaje fue encriptado con éxito!</p>
+            <p id="exito-des" class="exito-desencriptar">¡Tu mensaje a sido desencriptado!</p>
+            <button id="copiar" class="copiar" onclick="botonCopiar(), ocultarboton(), mostrar(), ocultarTexto()">Copiar</button>
         </section>
     </main>
     <footer id="pie">
