--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="stylehome.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
