correcciones y ajustes responsive

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <section section="principal">
+        <section class="principal">
             <img class="logo" src="img/Logo.png"/>
             <h1 class="titulo">Encriptador de Texto</h1>
             <p class="subtitulo">Challenge elaborado para <a href="https://www.aluracursos.com/">Alura Latam</a></p>
